Ajout de petits styles au headerComponent

--- a/frontend/groupomania/src/app/header/header.component.html
+++ b/frontend/groupomania/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<header class="header--flex">
-    <h1 class="header__heading2">Bienvenue sur Groupomania</h1>
-    <img src="../../assets/icon-left-font.webp" alt="Logo Groupomania" class="header_image" />
+<header class="header--flex header">
+    <img src="../../assets/icon-left-font.webp" srcset="
+      ../../assets/icon-left-font.webp 1024w,
+      ../assets/icon-above-font.webp    768w
+    " alt="Logo Groupomania" class="header__image" />
 </header>
