Ajout du component de la page d'inscription

--- a/frontend/groupomania/src/app/header/header.component.html
+++ b/frontend/groupomania/src/app/header/header.component.html
@@ -1,6 +1,3 @@
 <header class="header--flex header">
-    <img src="../../assets/icon-left-font.webp" srcset="
-      ../../assets/icon-left-font.webp 1024w,
-      ../assets/icon-above-font.webp    768w
-    " alt="Logo Groupomania" class="header__image" />
+    <img src="../../assets/icon-left-font.webp" alt="Logo Groupomania" class="header__image" />
 </header>
