--- a/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
+++ b/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
@@ -1,19 +1,24 @@
 @import "../SASS-utils/utils";
 //------------------------------------------------------
 .container {
-    width: 100%;
+    // width: 100%;
     height: 100vh;
     background-color: $color-primary;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     &__card {
-        margin: 25px 0 0 100px;
         width: 50%;
-        height: 85vh;
+        height: 485px;
         min-height: 180px;
         background-color: #fff;
         &--rounded {
             border-radius: 25px;
+        }
+        @include mobile-only {
+            margin: 0;
+            width: 75%;
         }
     }
     &__image-container {
@@ -30,23 +35,42 @@
         width: 125px;
         aspect-ratio: 16/9;
     }
+    &__fieldset {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 250px;
+        padding: auto;
+        border: 0;
+        overflow: hidden;
+    }
     &__form {
-        // background-color: blue;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 25%;
+        padding: auto;
     }
     &__input {
+        height: 40px;
+        width: 80%;
+        position: relative;
         @include rounded-inputs;
         padding: 15px;
         background-color: $color-secondary;
         &::placeholder {
             color: $color-tertiary;
             opacity: 69%;
+            transition: transform 750ms;
         }
         &:focus {
             outline: 3px solid $color-primary;
+            &::placeholder {
+                transform: translate(-50%, 0%);
+            }
         }
     }
     &__text {
@@ -66,7 +90,8 @@
     }
     &__button {
         @include rounded-inputs;
-        width: 195px;
+        height: 40px;
+        width: 80%;
         background-color: $color-primary;
         color: #fff;
         &:hover {
@@ -75,6 +100,20 @@
         }
         &:active {
             background-color: lighten($color-primary, 10%);
+        }
+    }
+    &__already-signed-up {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: $color-tertiary;
+        cursor: pointer;
+        &:active {
+            opacity: 85%;
+        }
+        &:hover {
+            text-decoration: underline;
         }
     }
 }
