Ajout du style pour la naviagtion

--- a/frontend/groupomania/src/app/header/header.component.html
+++ b/frontend/groupomania/src/app/header/header.component.html
@@ -1,3 +1,9 @@
 <header class="header--flex header">
     <img src="../../assets/icon-left-font.webp" alt="Logo Groupomania" class="header__image" />
+
+    <form action="#" class="header__form">
+        <button type="button" class="header__signup-button">Inscription</button>
+
+        <button type="button" class="header__login-button">Connexion</button>
+    </form>
 </header>
