--- a/frontend/groupomania/src/app/SASS-utils/_utils.scss
+++ b/frontend/groupomania/src/app/SASS-utils/_utils.scss
@@ -48,6 +48,13 @@ invalid:( bg: $color-invalid, borderOfInput: $color-primary, txt: $color-primary
     align-items: center;
 }
 
+@mixin center-flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 //Mixin pour les Media queries
 @mixin mobile-only {
     @media screen and (max-width: map-get($breakpoints, mobile)) {
