--- a/frontend/groupomania/src/app/header/header.component.scss
+++ b/frontend/groupomania/src/app/header/header.component.scss
@@ -1,7 +1,10 @@
 @import "../SASS-utils/utils";
 .header {
-    background-color: green;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     height: 100px;
+    width: 100%;
     overflow: hidden;
     @include mobile-only {
         display: flex;
@@ -12,5 +15,43 @@
         height: 200px;
         margin-left: 20px;
         object-position: -25px -50px;
+    }
+    &__form {
+        display: flex;
+        height: 100%;
+        width: 25%;
+        justify-content: space-around;
+        align-items: center;
+    }
+    &__signup-button {
+        background-color: $color-white;
+        color: $color-primary;
+        height: 50px;
+        width: 150px;
+        border-radius: 250px;
+        border: 2px solid $color-primary;
+        transition: 100ms ease-in;
+        transition-property: border background-color;
+        &:hover {
+            border: 4px solid $color-primary;
+        }
+        &:active {
+            background-color: darken($color-white, 7%);
+        }
+    }
+    &__login-button {
+        background-color: $color-primary;
+        color: $color-white;
+        height: 50px;
+        width: 150px;
+        border-radius: 250px;
+        border: 2px solid $color-white;
+        transition: background-color 50ms ease-in;
+        &:hover {
+            background-color: lighten($color-primary, 15%);
+        }
+        &:active {
+            background-color: darken($color-primary, 10%);
+        }
     }
 }
