--- a/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
+++ b/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
@@ -3,7 +3,7 @@
 .container {
     // width: 100%;
     height: 100vh;
-    background-color: $color-primary;
+    background-color: darken($color-secondary, 20%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,10 +36,7 @@
         aspect-ratio: 16/9;
     }
     &__fieldset {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        @include center-flex-column;
         width: 100%;
         height: 250px;
         padding: auto;
@@ -52,16 +49,17 @@
         justify-content: center;
         align-items: center;
         height: 25%;
-        padding: auto;
+        margin: 10px 0;
     }
     &__input {
         height: 40px;
         width: 80%;
         position: relative;
         @include rounded-inputs;
-        padding: 15px;
+        padding: 16px;
         background-color: $color-secondary;
         &::placeholder {
+            font-size: 16px;
             color: $color-tertiary;
             opacity: 69%;
             transition: transform 750ms;
@@ -81,19 +79,25 @@
         margin: 10px 0;
     }
     &__heading2 {
+        @include center-flex;
         margin: 5px 0;
         padding: 5px;
+        font-size: 30px;
     }
     &__paragraph {
-        margin: 2px 0;
+        margin: 10px 0;
         padding: 3px;
+        font-size: 18px;
     }
     &__button {
+        font-size: 16px;
         @include rounded-inputs;
         height: 40px;
         width: 80%;
         background-color: $color-primary;
         color: #fff;
+        padding: 16px;
+        line-height: 0;
         &:hover {
             background-color: darken($color-primary, 10%);
             cursor: pointer;
