--- a/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
+++ b/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
@@ -35,14 +35,6 @@
         width: 125px;
         aspect-ratio: 16/9;
     }
-    &__fieldset {
-        @include center-flex-column;
-        width: 100%;
-        height: 250px;
-        padding: auto;
-        border: 0;
-        overflow: hidden;
-    }
     &__form {
         display: flex;
         flex-direction: column;
@@ -77,17 +69,13 @@
         justify-content: center;
         align-items: center;
         margin: 10px 0;
+        padding: 15px 0;
     }
     &__heading2 {
         @include center-flex;
         margin: 5px 0;
         padding: 5px;
         font-size: 30px;
-    }
-    &__paragraph {
-        margin: 10px 0;
-        padding: 3px;
-        font-size: 18px;
     }
     &__button {
         font-size: 16px;
@@ -107,10 +95,11 @@
         }
     }
     &__already-signed-up {
-        display: flex;
-        flex-direction: column;
+        display: inline-flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
+        height: 25px;
         color: $color-tertiary;
         cursor: pointer;
         &:active {
@@ -120,4 +109,23 @@
             text-decoration: underline;
         }
     }
+}
+
+.fieldset {
+    @include center-flex-column;
+    margin: 25px 0;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 250px;
+    border: 0;
+    &__legend {
+        padding: 1% 0;
+        margin: 0 12%;
+        @include center-flex;
+    }
+}
+
+.already-signed-up-container {
+    height: 25%;
+    @include center-flex-column;
 }
