Tentative d'ajout de l'envoi du formulaire au Back-end AVANT l'implémentation du routing

--- a/frontend/groupomania/src/app/SASS-utils/_utils.scss
+++ b/frontend/groupomania/src/app/SASS-utils/_utils.scss
@@ -7,7 +7,7 @@ $color-secondary: #FFD7D7;
 $color-tertiary: #4E5166;
 $color-white: #fff;
 $color-black: #000;
-$color-invalid: #acabab;
+$color-invalid: #a5a4a4;
 
 /*
 -------------------------MAPS------------------- $[map]: ([key]: [value], [key]:([other map]));
