--- a/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.html
+++ b/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.html
@@ -1,4 +1,4 @@
-<div class="container container--rounded">
+<main class="container container--rounded">
     <div class="container__card container__card--rounded">
         <div class="container__image-container">
             <img src="../../assets/icon.webp" alt="Icone de Groupomania" class="container__image" />
@@ -6,25 +6,24 @@
         <div class="container__text">
             <h2 class="container__heading2">Bienvenue sur Groupomania</h2>
         </div>
-        <form class="container__form">
-            <!---#emailForm="ngForm" (ngSubmit)="onSubmit(emailForm) pour les TEMPLATE FORMS-->
+
+        <form class="container__form" [formGroup]="signupForm">
             <fieldset class="container__fieldset fieldset">
                 <legend class="fieldset__legend">
                     Veuillez renseigner ces champs:
                 </legend>
-                <input type="text" class="container__input" placeholder="Email" required />
-                <!-- 
-                <input type="text" class="container__input" placeholder="Email" required [(ngModel)]="userEmail" name="userEmail" />
-                <input type="password" class="container__input" placeholder="Mot de passe" required [(ngModel)]="userPassword" name="userPassword" id="password" />
-            -->
-                <input type="password" class="container__input password__input" placeholder="Mot de passe" required id="password" />
+                <input type="text" class="container__input" placeholder="Email" required formControlName="user_email" title="Champ de saisie d'email" />
+                <input type="password" class="container__input password__input" placeholder="Mot de passe" required id="password" formControlName="user_password" title="Champ de saisie de mot de passe" />
 
-                <button type="submit" class="container__button">S'inscrire</button>
+                <button type="submit" class="container__button" (click)="onSubmitForm()" [disabled]="signupForm.invalid" [ngClass]="{ 'container__button--disabled': signupForm.invalid }">
+          S'inscrire
+        </button>
             </fieldset>
         </form>
+
         <div class="already-signed-up-container">
             <a class="container__already-signed-up"> Êtes-vous déjà inscrit? </a>
         </div>
         <!--On mettra un routerLink plus tard-->
     </div>
-</div>
+</main>
