--- a/frontend/groupomania/src/app/login-page-component/login-page-component.component.html
+++ b/frontend/groupomania/src/app/login-page-component/login-page-component.component.html
@@ -1,1 +1,36 @@
-<p>login-page-component works!</p>
+<main class="container container--rounded">
+    <div class="container__card container__card--rounded">
+        <div class="container__image-container">
+            <img src="../../assets/icon.webp" alt="Icone de Groupomania" class="container__image" />
+        </div>
+        <div class="container__text">
+            <h2 class="container__heading2">Connectez-vous sur Groupomania</h2>
+        </div>
+
+        <form class="container__form" [formGroup]="loginForm">
+            <fieldset class="container__fieldset fieldset">
+                <legend class="fieldset__legend">Veuillez compléter ces champs:</legend>
+                <input type="text" class="container__input" placeholder="Email" required formControlName="user_email" title="Champ de saisie d'email" />
+
+                <input type="password" class="container__input password__input" placeholder="Mot de passe" required id="password" formControlName="user_password" title="Champ de saisie de mot de passe" />
+                <button type="submit" class="container__button" (click)="onSubmitLoginForm()" [disabled]="loginForm.invalid" [ngClass]="{ 'container__button--disabled': loginForm.invalid }">
+          Se connecter
+        </button>
+            </fieldset>
+        </form>
+
+        <div class="already-signed-up-container">
+            <a class="container__already-signed-up" routerLink="">
+        Voulez-vous vous inscrire
+      </a>
+        </div>
+
+        <div class="error-form" *ngIf="">
+            <i class="fas fa-times-circle error-form__icon"></i>
+            <p class="error-form__text">
+                L'email : {{ loginForm.value.user_email }} est invalide
+            </p>
+            <p class="error-form__text">Le mot de passe est incorrect</p>
+        </div>
+    </div>
+</main>
