Ajout de messages personnalisés en cas d'erreur de signup + login & class SASS lorsqu'on change de route

--- a/frontend/groupomania/src/app/header/header.component.html
+++ b/frontend/groupomania/src/app/header/header.component.html
@@ -4,11 +4,11 @@
     </a>
 
     <form action="#" class="header__form">
-        <button type="button" class="header__signup-button" routerLink="">
+        <button type="button" class="header__signup-button" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
       Inscription
     </button>
 
-        <button type="button" class="header__login-button" routerLink="/login">
+        <button type="button" class="header__login-button" routerLink="/login" routerLinkActive="active">
       Connexion
     </button>
     </form>
