--- a/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.html
+++ b/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.html
@@ -18,14 +18,14 @@
           ">
                     Email pas au bon format!
                 </p>
-                <input type="text" class="container__input" placeholder="Email" required formControlName="user_email" title="Champ de saisie d'email" />
+                <input type="text" class="container__input" placeholder="Email" required formControlName="user_email" title="Champ de saisie d'email" (change)="restoreInput()" />
                 <p class="container__input--invalid-password" *ngIf="
             passwordRegex.test(signupForm.value.user_password) === false &&
             signupForm.value.user_password != null
           ">
                     Mot de passe pas assez robuste!
                 </p>
-                <input type="password" class="container__input password__input" placeholder="Mot de passe" required id="password" formControlName="user_password" title="Champ de saisie de mot de passe" />
+                <input type="password" class="container__input password__input" placeholder="Mot de passe" required id="password" formControlName="user_password" title="Champ de saisie de mot de passe" (change)="restoreInput()" />
                 <button type="submit" class="container__button" (click)="onSubmitForm()" [disabled]="signupForm.invalid" [ngClass]="{ 'container__button--disabled': signupForm.invalid }">
           S'inscrire
         </button>
@@ -44,14 +44,10 @@
       </a>
         </div>
 
-        <div class="error-form" *ngIf="">
+        <div class="error-form" *ngIf="isUserAlreadyRegistered">
             <i class="fas fa-times-circle error-form__icon"></i>
-            <p class="error-form__text" *ngIf="">
-                L'email : {{ signupForm.value.user_email }} n'est pas au format [pseudonyme]@[domaine].[extension]
-            </p>
-
-            <p class="error-form__text" *ngIf="">
-                L'email : {{ signupForm.value.user_email }} est déjà enregistrée
+            <p class="error-form__text">
+                {{ errorMessage }}
             </p>
         </div>
     </div>
