Centralisation des services

--- a/frontend/groupomania/src/app/SASS-utils/_utils.scss
+++ b/frontend/groupomania/src/app/SASS-utils/_utils.scss
@@ -8,6 +8,7 @@ $color-tertiary: #4E5166;
 $color-white: #fff;
 $color-black: #000;
 $color-invalid: #a5a4a4;
+$color-valid: rgb(0, 184, 34);
 
 /*
 -------------------------MAPS------------------- $[map]: ([key]: [value], [key]:([other map]));
