Début de page des la route '/posts' pour les posts + récup tous les posts (Comme sur Twitter)

--- a/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.html
+++ b/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.html
@@ -1,1 +1,10 @@
 <p>posts-page-component works!</p>
+<div class="groupomania__post">
+    <div class="groupomania__pfp-container">
+        <img [src]="" [alt]="" />
+    </div>
+    <form class="groupomania__form">
+        <input type="text" placeholder="Cool title" />
+        <input type="text" placeholder="Insert description" />
+    </form>
+</div>
