Tentative d'ajout d'aperçu de l'image

--- a/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
+++ b/frontend/groupomania/src/app/landing-connexion-page/landing-connexion-page.component.scss
@@ -88,6 +88,7 @@
     }
     &__heading2 {
         @include center-flex;
+        text-align: center;
         margin: 5px 0;
         padding: 5px;
         font-size: 30px;
