--- a/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.scss
+++ b/frontend/groupomania/src/app/posts-page-component/posts-page-component.component.scss
@@ -1,8 +1,67 @@
+@import "../SASS-utils/utils";
 .groupomania {
     &__post {
-        background-color: orange;
+        @include center-flex;
+        height: 250px;
+        width: 100%;
+        background-color: blue;
     }
     &__pfp-container {
         background-color: yellow;
+        height: 50%;
+        min-width: 100px;
+        max-width: 125px;
+        overflow: hidden;
+        @include center-flex;
+        border-radius: $border-pill-shape-value;
+    }
+    &__pfp {
+        z-index: 50;
+        aspect-ratio: 16/9;
+        object-fit: cover;
+    }
+    &__form-container {
+        width: 100%;
+        height: 50%;
+    }
+    &__form {
+        width: 100%;
+        height: 100%;
+    }
+    &__fieldset {
+        background-color: cyan;
+        height: 100%;
+    }
+    &__title-input {
+        background-color: lime;
+        height: 20%;
+        width: 100%;
+    }
+    &__description-input {
+        background-color: lime;
+        height: 20%;
+        width: 100%;
+    }
+}
+
+.post {
+    &__button {
+        background-color: $color-primary;
+        &:hover {
+            background-color: darken($color-primary, 10%);
+        }
+        &:active {
+            background-color: lighten($color-primary, 10%);
+        }
+        &--disabled {
+            background-color: $color-invalid;
+            &:active {
+                background-color: $color-invalid;
+            }
+            &:hover {
+                background-color: $color-invalid;
+                cursor: not-allowed;
+            }
+        }
     }
 }
